Remove dark mode transition to avoid flash on page change

--- a/ui/css/base/scaffolding.scss
+++ b/ui/css/base/scaffolding.scss
@@ -10,20 +10,12 @@ body {
   color: var(--color-text, $color-text);
 
   background: var(--color-background, $color-background);
-
-  transition:
-    color $transition-dark-mode,
-    background-color $transition-dark-mode;
 }
 
 pre,
 code {
   color: var(--color-text, $color-text);
   background: var(--color-background-aside, $color-background-aside);
-
-  transition:
-    color $transition-dark-mode,
-    background-color $transition-dark-mode;
 }
 
 pre {
@@ -44,10 +36,6 @@ code {
   pre &[class*="language-"] {
     color: var(--color-text, $color-text);
     text-shadow: none;
-  }
-
-  .token {
-    transition: color $transition-dark-mode;
   }
 
   .token.operator {
