--- a/ui/css/base/tables.scss
+++ b/ui/css/base/tables.scss
@@ -1,14 +1,10 @@
 table {
   border-collapse: collapse;
   background: var(--color-background-aside, $color-background-aside);
-
-  transition: background-color $transition-dark-mode;
 }
 
 th,
 td {
   padding: 0.25em 0.5em;
   border: 1px solid var(--color-border, $color-border);
-
-  transition: border-color $transition-dark-mode;
 }
