--- a/ui/css/components/nav.scss
+++ b/ui/css/components/nav.scss
@@ -36,8 +36,6 @@
 .nav__text--link {
   text-decoration: none;
 
-  transition: background-color $transition-dark-mode;
-
   &:hover,
   &:focus,
   &.is-active {
