--- a/ui/css/variables.scss
+++ b/ui/css/variables.scss
@@ -1,8 +1,6 @@
 $breakpoint-layout: 60rem;
 $padding: 1rem;
 
-$transition-dark-mode: 300ms;
-
 // Themable colors and properties
 
 $color-title: rgb(255, 255, 255);
